internal/controller/testdata/postgresbinding/readwrite/consists_of/egress-netpol.yaml
---
action: exclusiveCreateOrUpdate
matcher: Subset
object:
  apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: myapp-mydb-egress
    namespace: myteam
  spec:
    podSelector:
      matchLabels:
        app: myapp
    policyTypes:
      - Egress
    egress:
      - to:
          - podSelector:
              matchLabels:
                cnpg.io/poolerName: pg-mydb-main-6bc4781b-pooler
        ports:
          - port: 5432
      - to:
          - namespaceSelector: {}
            podSelector:
              matchLabels:
                k8s-app: kube-dns
