internal/controller/testdata/postgresbinding/readwrite/consists_of/netpol.yaml
---
action: exclusiveCreateOrUpdate
matcher: Subset
object:
  apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: myapp-mydb
    namespace: myteam
  spec:
    podSelector:
      matchLabels:
        cnpg.io/poolerName: pg-mydb-main-6bc4781b-pooler
    policyTypes:
      - Ingress
    ingress:
      - from:
          - podSelector:
              matchLabels:
                app: myapp
        ports:
          - port: 5432
